--- a/assets/courses.scss
+++ b/assets/courses.scss
@@ -1,5 +1,5 @@
 .apex-bootstrap {
-  @import '../node_modules/bootstrap/scss/bootstrap';
+  @import '../node_modules/bootstrap-scss/bootstrap';
 
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
@@ -27,12 +27,10 @@
   }
 
   .apex-courses__template-content p {
-
     font-weight: inherit;
     background: inherit;
     color: inherit;
     font-size: inherit;
-
   }
 
   .apex-courses__template-content h1,
@@ -41,7 +39,7 @@
   .apex-courses__template-content h4,
   .apex-courses__template-content h5,
   .apex-courses__template-content h6 {
-    margin: 20px 0;
+    margin: 20px 0 0 0;
     font-weight: 600;
     color: inherit;
   }
@@ -81,9 +79,14 @@
   .apex-courses__price-price {
     font-size: 35px;
     font-weight: 400;
-    margin: 0;
-    margin-top: 10px;
+    margin: 10px 0 0 0;
     line-height: 1;
+    text-align: center;
+  }
+
+  .apex-courses__price-days {
+    font-size: 12px;
+    font-weight: 400;
     text-align: center;
   }
 
@@ -91,7 +94,7 @@
     background: #FFFCF7;
     padding: 20px;
     border-radius: 5px;
-    margin: 2px 0;
+    margin: 0 0 20px 0;
     border: 1px solid #F2EFE9;
     display: flex;
     flex: 0 0 100%;
@@ -123,6 +126,7 @@
     background-color: #007bff;
     border-color: #007bff;
     margin-top: 15px;
+    font-size: 12px;
   }
 
   .apex-courses__event-button:hover {
