--- a/assets/courses.scss
+++ b/assets/courses.scss
@@ -59,7 +59,7 @@
   }
 
   .apex-courses__price {
-    margin-top: 40px;
+    margin: 40px 0 20px 0;
     padding: 20px 35px;
     border: 1px solid #F2EFE9;
   }
