--- a/assets/courses.scss
+++ b/assets/courses.scss
@@ -183,18 +183,22 @@
       }
     }
 
-    .form-group {
+    .modal-body {
       text-align: left;
-      margin-bottom: 0;
+      font-size: 14px;
 
-      input, select {
-        font-size: 16px;
-      }
-
-      label {
-        padding-top: 10px;
+      .form-group {
         margin-bottom: 0;
-        font-size: 12px;
+
+        input, select {
+          font-size: 16px;
+        }
+
+        label {
+          padding-top: 10px;
+          margin-bottom: 0;
+          font-size: 12px;
+        }
       }
     }
   }
