Updated how course dates are shown. Fixed so that extra javascript code can be run after a booking. Updated how courses are listed. Fixed settings for all of the above

--- a/assets/courses.css
+++ b/assets/courses.css
@@ -6261,6 +6261,7 @@
     padding-bottom: 5px;
     padding-top: 5px; }
   .apex-bootstrap .apex-courses__event-place,
+  .apex-bootstrap .apex-courses__event-few-places,
   .apex-bootstrap .apex-courses__event-available {
     font-size: 14px;
     color: #666; }
