--- a/assets/courses.scss
+++ b/assets/courses.scss
@@ -108,6 +108,7 @@
   }
 
   .apex-courses__event-place,
+  .apex-courses__event-few-places,
   .apex-courses__event-available {
     font-size: 14px;
     color: #666;
